<resources>
    <string name="app_name">ChatGPT Integration</string>
    <string name="prompt_text">Enter Text Message</string>
    <string name="button_text">Send</string>
    <string name="hint_text">Enter text below to begin the chat! Please keep your WiFi or Data turned on.</string>
    <string name="return_to_bottom">Return to Bottom</string>
    <string name="desc_bot">Text Generated by chat GPT.</string>
    <string name="bot_voice_btn">voiceover button</string>
    <string name="new_session">New Session</string>
    <string name="send_again">Send Again</string>
    <string name="speak_btn_desc">Read Out Last Generated Text</string>
    <string name="splash_msg">App Introduction Logo</string>
    <string name="mic_info">Press for Voice Input</string>
    <string name="generating">Generating …</string>
    <string name="upload_text">Select Image</string>
    <string name="capture_text">Capture Image</string>
    <string name="scan_option">SCAN IMAGE</string>
    <string name="chat_option">CHAT WITH AI</string>
    <string name="display_image">display image</string>
    <string name="submit_img">SUBMIT</string>
    <string name="clear">CLEAR</string>
    <string name="view_btn">VIEW</string>
    <string name="text_editor_hint">Type Text here</string>
    <string name="bold_btn">BOLD</string>
    <string name="italics_btn">ITALICS</string>
    <string name="underline_btn">UNDERLINE</string>
    <string name="left_align">Left Align</string>
    <string name="center_align">Center Align</string>
    <string name="right_align">Right Align</string>
    <string name="clear_formatting">Clear Formatting</string>
    <string name="text_editor_card">TEXT EDITOR</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="generate_btn">Generate Text</string>
    <string name="delete_btn">Delete</string>
</resources>