<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="boldButton"
            android:src="@drawable/ic_bold"
            android:tooltipText="@string/bold_btn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_italics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="italicsButton"
            android:src="@drawable/ic_italic"
            android:tooltipText="@string/italics_btn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_underline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="underlineButton"
            android:src="@drawable/ic_underline"
            android:tooltipText="@string/underline_btn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/font_inc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="incButton"
            android:src="@drawable/ic_inc_font" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/font_dec_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="decButton"
            android:src="@drawable/ic_dec_font" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/left_aln_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="leftAlignButton"
            android:src="@drawable/ic_left"
            android:tooltipText="@string/left_align" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/center_aln_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="centerAlignButton"
            android:src="@drawable/ic_center"
            android:tooltipText="@string/center_align" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/right_aln_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="rightAlignButton"
            android:src="@drawable/ic_right"
            android:tooltipText="@string/right_align" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="clearButton"
            android:text="@string/clear_formatting"
            android:textSize="12sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/text_editor_hint"
            android:inputType="textMultiLine"
            android:minHeight="450dp" />
    </androidx.cardview.widget.CardView>


</LinearLayout>