<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryVariant"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressWheel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:indeterminate="true"
            android:indeterminateOnly="true"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/wait_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generating"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@drawable/main_background"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:gravity="center_horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_speak"
            android:src="@drawable/speech"
            android:background="@drawable/button_gradient"
            android:contentDescription="@string/speak_btn_desc"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:visibility="gone"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/return_to_bottom"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/down_arrow"
            android:background="@drawable/button_gradient"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/new_session"
            android:src="@drawable/clear_btn"
            android:background="@drawable/button_gradient"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_gravity="end">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mic_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/mic_info"
            android:src="@drawable/mic_btn" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:autofillHints="name"
            android:background="@drawable/main_background"
            android:focusedByDefault="true"
            android:hint="@string/prompt_text"
            android:imeOptions="actionSend"
            android:inputType="textMultiLine"
            android:minLines="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/button_text"
            android:src="@drawable/send_btn" />
    </LinearLayout>

</LinearLayout>